update brand name

--- a/al_yaqeen/ui/templates/registration/base.html
+++ b/al_yaqeen/ui/templates/registration/base.html
@@ -85,7 +85,9 @@
               />
               <path d="M14 17h8" />
             </svg>
-            <span class="sr-only">{% trans 'Al-Yaqeen | Profile' %}</span>
+            <span class="sr-only">
+              {% trans 'The Certain News' %} | {% trans 'Profile' %}
+            </span>
           </a>
         </div>
 
