--- a/al_yaqeen/ui/templates/ui/articles/id.html
+++ b/al_yaqeen/ui/templates/ui/articles/id.html
@@ -8,7 +8,7 @@
 <meta name="description" content="{{ article.headline }}" />
 <meta property="og:url" content="{{ request.build_absolute_uri }}" />
 <meta property="og:type" content="website" />
-<meta property="og:title" content="{% trans 'Al-Yaqeen' %} | {{ article.title }}" />
+<meta property="og:title" content="{% trans 'The Certain News' %} | {{ article.title }}" />
 <meta property="og:description" content="{{ article.headline }}" />
 <meta property="og:image" content="{{ article.image.file.url }}" />
 <meta property="og:image:width" content="1200" />
@@ -17,7 +17,7 @@
 <meta name="twitter:card" content="summary_large_image" />
 <meta property="twitter:domain" content="alyaqeen.pythonanywhere.com" />
 <meta property="twitter:url" content="{{ request.build_absolute_uri }}" />
-<meta name="twitter:title" content="{% trans 'Al-Yaqeen' %} | {{ article.title }}" />
+<meta name="twitter:title" content="{% trans 'The Certain News' %} | {{ article.title }}" />
 <meta name="twitter:description" content="{{ article.headline }}" />
 <meta name="twitter:image" content="{{ article.image.file.url }}" />
 {% endblock %}
