--- a/al_yaqeen/ui/templates/registration/login.html
+++ b/al_yaqeen/ui/templates/registration/login.html
@@ -13,7 +13,7 @@
   >
     <header
       class="tooltip tooltip-bottom tooltip-primary tooltip-open mt-4 mx-auto"
-      data-tip="{% trans 'Al-Yaqeen' %}"
+      data-tip="{% trans 'The Certain News' %}"
     >
       <a href="{% url 'ui:home' %}" class="btn btn-square btn-xl btn-primary">
         <svg
@@ -36,7 +36,7 @@
           />
           <path d="M14 17h8" />
         </svg>
-        <span class="sr-only">{% trans 'Al-Yaqeen' %}</span>
+        <span class="sr-only">{% trans 'The Certain News' %}</span>
       </a>
     </header>
 
