--- a/al_yaqeen/ui/templates/ui/articles/list.html
+++ b/al_yaqeen/ui/templates/ui/articles/list.html
@@ -25,6 +25,17 @@
     <li id="{{ article.slug }}" class="col-span-12 md:col-span-6 lg:col-span-4">
       {% include 'ui/components/article.html' %}
     </li>
+    {% empty %}
+    <li class="col-span-12 flex items-center justify-center">
+      <div class="card bg-base-200">
+        <div class="card-body items-center gap-8">
+          <i data-lucide="circle-alert" class="text-primary size-1/3"></i>
+          <h3 class="text-primary lg:text-xl">
+            {% trans 'None published' %}
+          </h3>
+        </div>
+      </div>
+    </li>
     {% endfor %}
   </ol>
 
