--- a/al_yaqeen/ui/templates/ui/categories/list.html
+++ b/al_yaqeen/ui/templates/ui/categories/list.html
@@ -17,7 +17,7 @@
   {% for category in category_list %}
   <section id="{{ category.slug }}" class="grid gap-4 lg:gap-6">
     <div
-      class="rounded border-primary flex items-center justify-between border-l-8 rtl:border-r-8 p-4"
+      class="rounded border-primary flex items-center justify-between border-l-8 rtl:border-l-0 rtl:border-r-8 p-4"
     >
       <h2 class="text-primary text-xl font-semibold lg:text-3xl">
         {{ category.title }}
@@ -48,9 +48,31 @@
       >
         {% include 'ui/components/article.html' %}
       </div>
+      {% empty %}
+      <div class="col-span-12 mx-auto flex items-center justify-center">
+        <div class="card bg-base-200">
+          <div class="card-body items-center gap-8">
+            <i data-lucide="circle-alert"class="text-primary size-1/3"></i>
+            <h3 class="text-primary lg:text-xl">
+              {% trans 'No news published in this category' %}
+            </h3>
+          </div>
+        </div>
+      </div>
       {% endfor %}
     </div>
   </section>
+  {% empty %}
+  <div class="col-span-12 flex items-center justify-center">
+    <div class="card bg-base-200">
+      <div class="card-body items-center gap-8">
+        <i data-lucide="circle-alert" class="text-primary size-1/3"></i>
+        <h3 class="text-primary lg:text-xl">
+          {% trans 'No published categories' %}
+        </h3>
+      </div>
+    </div>
+  </div>
   {% endfor %}
 </section>
 {% endblock %}
