--- a/al_yaqeen/ui/templates/ui/index.html
+++ b/al_yaqeen/ui/templates/ui/index.html
@@ -118,6 +118,24 @@
         </main>
       </article>
     </div>
+    {% empty %}
+    <div class="carousel-item size-full">
+      <article
+        class="card relative size-full rounded-box card-sm md:card-md lg:card-xl"
+      >
+        <main class="card-body justify-between gap-4 lg:gap-6">
+          <div class="hero grow">
+            <div class="hero-content flex-col gap-4 lg:gap-6">
+              <h1
+                class="card-title font-serif text-2xl font-black text-shadow-lg lg:text-7xl rtl:font-kufi"
+              >
+                {% trans 'None' %}
+              </h1>
+            </div>
+          </div>
+        </main>
+      </article>
+    </div>
     {% endfor %}
   </div>
 </section>
@@ -150,6 +168,12 @@
     {% for article in latest_news %}
     <div id="{{ article.slug }}" class="carousel-item w-full md:w-1/2 lg:w-1/3">
       {% include 'ui/components/article.html' %}
+    </div>
+    {% empty %}
+    <div class="carousel-item size-full">
+      <h3 class="font-serif lg:text-xl rtl:font-kufi">
+        {% trans 'None' %}
+      </h3>
     </div>
     {% endfor %}
   </div>
@@ -216,6 +240,12 @@
           </a>
         </main>
       </article>
+    </div>
+    {% empty %}
+    <div class="carousel-item size-full">
+      <h3 class="font-serif lg:text-xl rtl:font-kufi">
+        {% trans 'None' %}
+      </h3>
     </div>
     {% endfor %}
   </div>
