--- a/al_yaqeen/ui/templates/ui/components/article.html
+++ b/al_yaqeen/ui/templates/ui/components/article.html
@@ -4,7 +4,7 @@
   class="card relative size-full bg-base-200 p-4 hover:shadow lg:card-lg xl:card-xl"
 >
   <figure class="rounded-box overflow-hidden">
-    {% image article.image scale-100 %}
+    {% image article.image fill-1920x1080 %}
   </figure>
   <main class="card-body gap-4 lg:gap-6">
     <h1 class="card-title font-serif text-primary rtl:font-kufi">
