--- a/al_yaqeen/ui/templates/ui/articles/id.html
+++ b/al_yaqeen/ui/templates/ui/articles/id.html
@@ -126,7 +126,8 @@
 
   <section id="article-content" class="col-span-12 lg:col-span-8 lg:col-start-4 lg:col-end-10">
     <div
-      class="prose prose-neutral max-w-none prose-video:rounded-box xl:prose-lg 2xl:prose-xl prose-headings:text-primary prose-headings:font-serif rtl:prose-headings:font-kufi prose-img:rounded-box prose-img:w-full">
+      class="max-w-none prose prose-sm md:processes-md prose-video:rounded-box xl:prose-lg 2xl:prose-xl prose-headings:text-primary prose-headings:font-serif rtl:prose-headings:font-kufi prose-img:rounded-box prose-img:w-full"
+    >
       <h1>{{ article.title }}</h1>
       <h2>{{ article.headline }}</h2>
       {% include_block article.content %}
