--- a/al_yaqeen/ui/templates/ui/about.html
+++ b/al_yaqeen/ui/templates/ui/about.html
@@ -46,7 +46,7 @@
       {% blocktrans trimmed %}Founded on the principles of trust and certainty,
       <strong>The Certain News</strong> was born out of the need for a platform
       that goes beyond quick headlines. Our name, which means
-      &quot;certainty&quot; in Arabic, reflects our promise to deliver news that
+      <strong>certainty</strong> in Arabic, reflects our promise to deliver news that
       you can rely on. Drawing from a passion for deep investigation and a
       relentless search for the truth, our team is at the forefront of modern
       journalism, merging traditional reporting with cutting-edge technology.
