--- a/al_yaqeen/ui/templates/ui/index.html
+++ b/al_yaqeen/ui/templates/ui/index.html
@@ -1,4 +1,4 @@
-{% extends 'ui/base.html' %}{% load i18n wagtailimages_tags %}
+{% extends 'ui/base.html' %}{% load i18n wagtailcore_tags wagtailimages_tags %}
 
 <!---->
 {% block content %}
@@ -16,7 +16,7 @@
           >
             <a
               class="btn btn-circle btn-primary lg:btn-xl"
-              href="{% url 'ui:article' article.created_at|date:'Y' article.created_at|date:'m' article.created_at|date:'d' article.slug %}"
+              href="{% pageurl article %}"
             >
               <i
                 data-lucide="arrow-right"
