update category links

--- a/al_yaqeen/ui/templates/registration/password_reset_form.html
+++ b/al_yaqeen/ui/templates/registration/password_reset_form.html
@@ -17,7 +17,9 @@
 
     <p>
       {% blocktrans trimmed %}Forgotten your password? Enter your email address
-      below, and we'll email instructions for setting a new one.{% endblocktrans %}
+      below, and we'll email instructions for setting a new one.
+      <!---->
+      {% endblocktrans %}
     </p>
 
     {% include 'ui/components/form.html' %}
