--- a/al_yaqeen/ui/templates/ui/about.html
+++ b/al_yaqeen/ui/templates/ui/about.html
@@ -37,8 +37,8 @@
       {% blocktrans trimmed %}We envision a world where the truth is accessible
       to all.
       <strong>The Certain News</strong> strives to be more than just a news
-      website a commitment to excellence in journalism. We aim to lead the
-      way in digital storytelling by embracing innovative technology, ethical
+      website a commitment to excellence in journalism. We aim to lead the way
+      in digital storytelling by embracing innovative technology, ethical
       reporting, and a community-driven approach.{% endblocktrans %}
     </p>
     <h2>{% trans 'Our Story' %}</h2>
@@ -46,8 +46,8 @@
       {% blocktrans trimmed %}Founded on the principles of trust and certainty,
       <strong>The Certain News</strong> was born out of the need for a platform
       that goes beyond quick headlines. Our name, which means
-      <strong>certainty</strong> in Arabic, reflects our promise to deliver news that
-      you can rely on. Drawing from a passion for deep investigation and a
+      <strong>certainty</strong> in Arabic, reflects our promise to deliver news
+      that you can rely on. Drawing from a passion for deep investigation and a
       relentless search for the truth, our team is at the forefront of modern
       journalism, merging traditional reporting with cutting-edge technology.
       <!---->
