--- a/al_yaqeen/ui/templates/ui/contact.html
+++ b/al_yaqeen/ui/templates/ui/contact.html
@@ -18,8 +18,8 @@
     </p>
     <h2>{% trans 'General Inquiries' %}</h2>
     <p>
-      {% blocktrans trimmed %}For general questions or comments, please email
-      us at:<br />
+      {% blocktrans trimmed %}For general questions or comments, please email us
+      at:<br />
       <strong>Email:</strong>
       {% endblocktrans %}
       <a href="#">contact@alayaqeennews.com</a>
@@ -43,8 +43,8 @@
     </p>
     <h2>{% trans 'Social Media' %}</h2>
     <p>
-      {% blocktrans trimmed %}Stay connected and join the conversation
-      on our social channels:{% endblocktrans %}
+      {% blocktrans trimmed %}Stay connected and join the conversation on our
+      social channels:{% endblocktrans %}
     </p>
     <ul>
       <li>
@@ -68,8 +68,8 @@
     </ul>
     <h2>{% trans 'Office Address' %}</h2>
     <p>
-      {% blocktrans trimmed %}If you prefer to visit or send mail, our office
-      is located at:<br />
+      {% blocktrans trimmed %}If you prefer to visit or send mail, our office is
+      located at:<br />
       The Certain News<br />
       Burj Islam<br />
       Latakia, Syria{% endblocktrans %}
