--- a/al_yaqeen/ui/templates/ui/articles/list.html
+++ b/al_yaqeen/ui/templates/ui/articles/list.html
@@ -30,9 +30,7 @@
       <div class="card bg-base-200">
         <div class="card-body items-center gap-8">
           <i data-lucide="circle-alert" class="text-primary size-1/3"></i>
-          <h3 class="text-primary lg:text-xl">
-            {% trans 'None published' %}
-          </h3>
+          <h3 class="text-primary lg:text-xl">{% trans 'None published' %}</h3>
         </div>
       </div>
     </li>
