--- a/al_yaqeen/ui/templates/ui/categories/list.html
+++ b/al_yaqeen/ui/templates/ui/categories/list.html
@@ -1,4 +1,4 @@
-{% extends 'ui/base.html' %}{% load i18n wagtailimages_tags %}
+{% extends 'ui/base.html' %}{% load i18n wagtailcore_tags wagtailimages_tags %}
 
 <!---->
 {% block title %}{{ block.super }} | {% trans 'Categories' %}{% endblock %}
@@ -28,7 +28,7 @@
         data-tip="{% trans 'See All' %}"
       >
         <a
-          href="{% url 'ui:category' category.slug %}"
+          href="{% pageurl category %}"
           class="btn btn-circle btn-soft btn-primary lg:btn-lg"
         >
           <i
@@ -52,7 +52,7 @@
       <div class="col-span-12 mx-auto flex items-center justify-center">
         <div class="card bg-base-200">
           <div class="card-body items-center gap-8">
-            <i data-lucide="circle-alert"class="text-primary size-1/3"></i>
+            <i data-lucide="circle-alert" class="text-primary size-1/3"></i>
             <h3 class="text-primary lg:text-xl">
               {% trans 'No news published in this category' %}
             </h3>
