--- a/al_yaqeen/ui/templates/rest_framework/api.html
+++ b/al_yaqeen/ui/templates/rest_framework/api.html
@@ -53,10 +53,7 @@
   class="tooltip tooltip-right rtl:tooltip-left tooltip-secondary"
   data-tip="{% trans 'Home' %}"
 >
-  <a
-    href="{% url 'ui:home' %}"
-    class="btn btn-sm btn-square btn-ghost lg:btn-md"
-  >
+  <a href="/" class="btn btn-sm btn-square btn-ghost lg:btn-md">
     <i data-lucide="house" class="size-4 lg:size-6"></i>
     <span class="sr-only">{% trans 'Home' %}</span>
   </a>
