--- a/al_yaqeen/ui/templates/ui/articles/id.html
+++ b/al_yaqeen/ui/templates/ui/articles/id.html
@@ -63,7 +63,7 @@
             href="{% pageurl article.get_parent %}"
             class="join-item badge badge-soft badge-primary lg:badge-xl w-full font-bold"
           >
-            {{ article.get_parent.title }}
+            {{ article.get_parent }}
           </a>
         </div>
 
