--- a/al_yaqeen/ui/templates/registration/base.html
+++ b/al_yaqeen/ui/templates/registration/base.html
@@ -61,10 +61,7 @@
           class="tooltip tooltip-right rtl:tooltip-left tooltip-primary tooltip-open"
           data-tip="{% trans 'Profile' %}"
         >
-          <a
-            href="{% url 'ui:home' %}"
-            class="btn btn-square btn-lg btn-primary"
-          >
+          <a href="/" class="btn btn-square btn-lg btn-primary">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               width="24"
