update breaking icon

--- a/al_yaqeen/ui/templates/ui/base.html
+++ b/al_yaqeen/ui/templates/ui/base.html
@@ -210,9 +210,9 @@
                         />
                         <path d="M14 17h8" />
                       </svg>
-                      <span class="sr-only"
-                        >{% trans 'The Certain News' %}</span
-                      >
+                      <span class="sr-only">
+                        {% trans 'The Certain News' %}
+                      </span>
                     </a>
                   </div>
 
@@ -224,7 +224,7 @@
                       href="{% url 'ui:articles' %}?is_breaking=True"
                       class="btn btn-square btn-sm join-item btn-error lg:btn-md"
                     >
-                      <i data-lucide="group" class="size-4 lg:size-6"></i>
+                      <i data-lucide="podcast" class="size-4 lg:size-6"></i>
                       <span class="sr-only">{% trans 'Breaking' %}</span>
                     </a>
                   </div>
@@ -537,7 +537,7 @@
                 class="btn btn-square btn-lg join-item btn-primary btn-soft"
               >
                 <i data-lucide="twitter" class="size-4 lg:size-6"></i>
-                <span class="sr-only">{% trans 'C' %}</span>
+                <span class="sr-only">{% trans 'X' %}</span>
               </a>
             </div>
             <div
