update article styles (line height)

--- a/al_yaqeen/ui/templates/ui/articles/id.html
+++ b/al_yaqeen/ui/templates/ui/articles/id.html
@@ -181,7 +181,7 @@
     class="col-span-12 lg:col-span-8 lg:col-start-4 lg:col-end-10"
   >
     <div
-      class="max-w-none prose prose-sm md:processes-md prose-video:rounded-box xl:prose-lg 2xl:prose-xl prose-headings:text-primary prose-headings:font-serif rtl:prose-headings:font-kufi prose-img:rounded-box prose-img:w-full"
+      class="max-w-none prose prose-sm md:processes-md prose-video:rounded-box xl:prose-lg 2xl:prose-xl prose-headings:text-primary prose-headings:leading-12 prose-headings:font-serif rtl:prose-headings:font-kufi prose-img:rounded-box prose-img:w-full lg:prose-headings:leading-20"
     >
       <h1>{{ article.title }}</h1>
       <h2>{{ article.headline }}</h2>
